--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/market-square-db
+spring.datasource.username=postgres
+spring.datasource.password=gordon@2011
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+security.basic.enabled=false
