--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
     error:
         include-message: always
         include-binding-errors: always
-#    port: 9000
+    port: 8001
 spring:
     profiles:
         active: dev
