--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
     jpa:
         hibernate:
             ddl-auto: update
-        show-sql: true
+#        show-sql: true
     servlet:
         multipart:
             enabled: true
