fix: file upload to s3 bucket

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,7 +43,7 @@ cloud:
             auto: false
 
 bucket:
-    name: market-square-storage
+    name: market-sqaure-storage
 
 jwt:
     secret: ${JWT_SECRET}
